--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
         <div class="row thinPad">
             <div class="col-sm-4">
                 <a href="https://twitter.com/IAmJoelGroff">
-                    <img id="twitterIcon"  src="TwitterLogo.png" height="40px;" />&emsp;
+                    <img id="twitterIcon"  src="twitterLogo.png" height="40px;" />&emsp;
                 </a>
                 <a href="https://www.linkedin.com/in/joel-groff-97b798138/">
                     <img id="linkedInIcon"  src="LinkedInIcon.png" height="40px;" />
