--- a/CC.html
+++ b/CC.html
@@ -49,7 +49,7 @@
                 I am the designer and one of two programmers developing Cyrstals and Curses.
                 Our team, Leap Doctor Games, believes that games have the ability to enrich people's lives.
                 They are the perfect blend of visual art, story, sound design, problem-solving, and fun.
-                <br/><br/>Crystals and Curses respects players' intelligence with challening, ever changing puzzles.
+                <br/><br/>Crystals and Curses respects players' intelligence with challenging, ever changing puzzles.
                 I hope you love it as much as we do.
                 You can follow our development on twitter:<br/>
                 <a href="twitter.com/@LeapDoctorGames" style="font-size:25px">@LeapDoctorGames.</a>
@@ -76,8 +76,7 @@
         <div class="row thickPad">
 			<div class="col-sm-offset-4 col-sm-4  text-center textTwo">
                 Crystals and Curses is more than a series of puzzles. It has fast-paced boss battles,
-                gambling lobsters, riddles, inhabited suits of armor,
-                and...secrets.
+                gambling lobsters, riddles, inhabited suits of armor, and...secrets.
 			</div>
         </div>
         <div class="row thinPad">
