--- a/CC.html
+++ b/CC.html
@@ -46,7 +46,7 @@
         </div>
 		<div class="row thinPad">
 			<div class="col-sm-offset-4 col-sm-4 text-center textTwo">
-                I am the designer and one of two programmers developing Cyrstals and Curses.
+                I am the designer and one of two programmers developing Crystals and Curses.
                 Our team, Leap Doctor Games, believes that games have the ability to enrich people's lives.
                 They are the perfect blend of visual art, story, sound design, problem-solving, and fun.
                 <br/><br/>Crystals and Curses respects players' intelligence with challenging, ever changing puzzles.
