updated broken twitter links.

--- a/CC.html
+++ b/CC.html
@@ -52,7 +52,7 @@
                 <br/><br/>Crystals and Curses respects players' intelligence with challenging, ever changing puzzles.
                 I hope you love it as much as we do.
                 You can follow our development on twitter:<br/>
-                <a href="twitter.com/@LeapDoctorGames" style="font-size:25px">@LeapDoctorGames.</a>
+                <a href=“https://www.twitter.com/@LeapDoctorGames" style="font-size:25px">@LeapDoctorGames.</a>
 			</div>
         </div>
         <div class="row thickPad">
