--- a/about.html
+++ b/about.html
@@ -47,30 +47,31 @@
 		<div class="row thinPad">
 			<div class="col-sm-6 textTwo">
 				<p>
-					I'm a full-time student at the University of South Florida
-					pursuing a BS in Computer Science. My team at Leap Doctor Games
-					is currently developing a puzzle game - Crystals and Curses.
-					<a href="twitter.com/@leapdoctorgames">Follow us here.</a>
-				</p>
-				<p>
-					I've always been drawn to video games as they are the crossroads of multiple art forms
-					like story, music, sound, animation, and visual art. Games allow us to slay dragons,
+					Video games are a beautiful blend of multiple art forms like music, 
+					story, sound design, animation, and visual art. Games allow us to slay dragons,
 					dog-fight in space, and challenge our minds with complex puzzles. They tell stories
 					of life and death, mistakes, love, and friendship.
 				</p>
 				<p>
-					Outside of class, I have invested my free time creating games and other software,
-					some of which I have included here.
+					I am the project lead, game designer, and a programmer at Leapdoctor Games.
+					I want our creations to inspire
+					people to explore, use their minds, and create in their own way. 
+					We are currently building
+					a super challenging puzzle game called <a href="http://www.CrystalsandCurses.com">Crystals and Curses</a>, where we respect players’
+					intelligence and allow them to exercise their problem-solving skills. 
 				</p>
 				<p>
-					I hope you enjoy!
+					<a href="https://www.twitter.com/@leapdoctorgames">Follow our development here.</a>
+				</p>
+				<p>
+					I have included both professional and hobby work here. Feel free to explore and I hope you enjoy!
 				</p>
 				<p>
 				<strong>
 					My skills include:
 				</p>
 				<p>
-					C <br />C# <br />C++<br />Python<br />html<br />CSS
+					C <br />C# <br />C++<br />Python
 				</p>
 				<p>
 					Photoshop<br />Unity<br />Blender<br />Git
@@ -79,7 +80,8 @@
 				<p>
 					Please contact me at <strong>groffjoel@gmail.com</strong>
 					if you would like to learn more about my
-					experience or how I could help your organization with its next project.
+					projects. To see more of Crystals and Curses 
+					<a href="http://www.CrystalsandCurses.com">visit our site.</a>
 				</p>
 			</div>
             <div class="col-sm-6">
